--- a/src/components/styles/link.module.css
+++ b/src/components/styles/link.module.css
@@ -1,5 +1,23 @@
 a {
-  text-decoration: none;
-  color: black;
-  font-size: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 24px 32px;
+  width: 100%;
+  background: var(--gray-200);
+  border: 1px solid var(--gray-200);
+  border-radius: 8px;
+}
+a:hover {
+  background-color: var(--gray-300);
+  box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+}
+a:focus {
+  background-color: var(--gray-200);
+  border: 1px solid var(--gray-400);
+}
+a[state="disabled"],
+a:disabled {
+  background-color: var(--white);
+  border: var(--white);
 }
