--- a/src/components/styles/link.module.css
+++ b/src/components/styles/link.module.css
@@ -1,4 +1,4 @@
-a {
+#a {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,16 +8,16 @@ a {
   border: 1px solid var(--gray-200);
   border-radius: 8px;
 }
-a:hover {
+#a:hover {
   background-color: var(--gray-300);
   box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
 }
-a:focus {
+#a:focus {
   background-color: var(--gray-200);
   border: 1px solid var(--gray-400);
 }
-a[state="disabled"],
-a:disabled {
+#a[state="disabled"],
+#a:disabled {
   background-color: var(--white);
   border: var(--white);
 }
