--- a/src/components/styles/profile.module.css
+++ b/src/components/styles/profile.module.css
@@ -1,13 +1,52 @@
-#profile__img {
-  display: none;
-  /* width: 2px; */
+.profile__img {
+  /* display: none; */
+
+  width: 88px;
+  height: 88px;
+  border-radius: 275px;
 }
 
 .profile {
-  height: 100%;
-  background-color: red;
+  /* height: 100%; */
+  position: relative;
+  /* background-color: red; */
+  /* width: max-content; */
+  border-radius: 275px;
+  cursor: pointer;
 }
-#hi {
+
+.profile::after {
   display: none;
-  background-color: red;
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  right: 0%;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(52, 64, 84, 0.75);
+  border-radius: 275px;
+  /* z-index: 999; */
+  /* display: inline-block; */
+}
+
+.profile:hover::after {
+  display: inline;
+}
+.cam {
+  display: none;
+  position: absolute;
+  z-index: 999;
+  /* background-color: red; */
+  bottom: 8px;
+  right: 36%;
+}
+.profile:hover .cam {
+  display: block;
+}
+
+.profile__img:focus,
+.profile:focus {
+  /* display: none; */
+  /* border: 5.5px solid rgba(235, 233, 254, 1); */
+  box-shadow: 0px 0px 0px 5.5px rgba(235, 233, 254, 1);
 }
