--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ a {
   line-height: clamp(20px, 5vw, 28px);
 }
 :root {
+  --gray-50: #f9fafb;
   --gray-100: #f2f4f7;
   --gray-200: #eaecf0;
   --gray-300: #d0d5dd;
