Fix profile picture container width to max-content

--- a/src/components/styles/profile.module.css
+++ b/src/components/styles/profile.module.css
@@ -10,7 +10,7 @@
   /* height: 100%; */
   position: relative;
   /* background-color: red; */
-  /* width: max-content; */
+  width: max-content;
   border-radius: 275px;
   cursor: pointer;
 }
