--- a/src/App.module.css
+++ b/src/App.module.css
@@ -12,7 +12,7 @@
   flex-direction: column;
   align-items: center; */
   /* justify-content: center; */
-  width: clamp(300px, 84.4%, 1440px);
+  width: clamp(375px, 84.4%, 1216px);
   /* max-width: 1440px; */
   min-width: 300px;
   min-height: 100vh;
@@ -42,7 +42,14 @@
   /* position: sticky; */
   justify-self: flex-end;
   position: absolute;
-  top: 44px;
-  right: 10%;
+  top: 0px;
+  left: 90%;
   /* padding-right: ; */
+}
+
+.links__section {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  margin-top: 56px;
 }
