--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,8 +1,9 @@
 .App {
-  text-align: center;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  text-align: center;
+
   /* width: 100%; */
   /* max-width: 1440px; */
 }
@@ -42,7 +43,7 @@
   /* position: sticky; */
   justify-self: flex-end;
   position: absolute;
-  top: 0px;
+  top: 44px;
   left: 90%;
   /* padding-right: ; */
 }
@@ -52,4 +53,45 @@
   flex-direction: column;
   gap: 24px;
   margin-top: 56px;
+}
+
+.social__icons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 24px 0px;
+  gap: 26.25px;
+}
+
+.footer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 48px 0;
+  margin-top: 64px;
+}
+.footer__content {
+  padding-top: 32px;
+  padding-top: ;
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  /* align-items: center; */
+  width: 90%;
+  border-top: 1px solid var(--gray-200);
+}
+
+.footer__content p {
+  font-weight: 400;
+  font-size: 16px;
+  margin: 0;
+  line-height: 24px;
+  text-align: center;
+  color: var(--gray-500);
+}
+
+@media screen and (max-width: 768px) {
+  .footer__content {
+    display: none;
+  }
 }
