--- a/src/App.module.css
+++ b/src/App.module.css
@@ -83,7 +83,7 @@
 
 .footer__content p {
   font-weight: 400;
-  font-size: 16px;
+  font-size: clamp(12px, 2.5vw, 16px);
   margin: 0;
   line-height: 24px;
   text-align: center;
@@ -92,6 +92,12 @@
 
 @media screen and (max-width: 768px) {
   .footer__content {
-    display: none;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+  }
+  .footer__content img {
+    width: 30%;
+    height: 50%;
   }
 }
