--- a/src/components/styles/link.module.css
+++ b/src/components/styles/link.module.css
@@ -7,6 +7,7 @@
   background: var(--gray-200);
   border: 1px solid var(--gray-200);
   border-radius: 8px;
+  transition: 0.3s width;
 }
 .a:hover {
   background-color: var(--gray-300);
