--- a/src/pages/styles/contact.module.css
+++ b/src/pages/styles/contact.module.css
@@ -1,5 +1,19 @@
 .form {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  /* grid-template-areas:
+    "first last"
+    "email   "
+    "message  "
+    "checkbox"; */
   gap: 24px;
+}
+.email {
+  grid-column: 1/3;
+}
+.first {
+  grid-column: 1/2;
+}
+.last {
+  grid-column: 2/-1;
 }
