--- a/src/components/styles/input.module.css
+++ b/src/components/styles/input.module.css
@@ -1,6 +1,9 @@
 fieldset {
   display: flex;
   flex-direction: column;
+  padding: 0;
+  gap: 6px;
+  border: none;
 }
 fieldset label {
   align-self: flex-start;
@@ -12,4 +15,45 @@ fieldset label {
 .checkbox {
   flex-direction: row;
   grid-column: 1/3;
+}
+.checkbox label {
+  color: var(--gray-600);
+  font-weight: 400;
+}
+input[type="checkbox"] {
+  -webkit-appearance: none;
+  outline: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  padding: 0;
+  width: 20px;
+  height: 20px;
+  border-radius: 6px !important;
+  transition: all 0.2s;
+}
+input[toggle="toggle"] {
+  background-color: var(--gray-50);
+  border: 1px solid var(--primary-600);
+}
+input[toggle="toggle"]::after {
+  position: absolute;
+  content: url("../../images/mark.svg");
+}
+input[type="checkbox"]:focus {
+  box-shadow: 0px 0px 0px 4px var(--primary-300);
+}
+input[type="checkbox"]:disabled {
+  border: 1px solid var(--gray-300);
+  background-color: var(--gray-100);
+}
+
+@media screen and (max-width: 700px) {
+  .message {
+    grid-column: 1/-1;
+  }
+  .checkbox {
+    grid-column: 1/-1;
+  }
 }
