--- a/src/components/styles/input.module.css
+++ b/src/components/styles/input.module.css
@@ -8,11 +8,32 @@ fieldset {
 fieldset label {
   align-self: flex-start;
 }
+input {
+  position: relative;
+}
+input[type="text"]:focus {
+  border: 1px solid var(--primary-300);
+}
+input:invalid:focus,
+textarea:invalid:focus {
+  border: 1px solid var(--error);
+}
+input[type="text"]::after {
+  /* display: block; */
+  position: absolute;
+  top: 100px;
+  background-color: red;
+  content: "Please enter something";
+  height: 50px;
+  width: 50px;
+}
 .message {
   width: 100%;
   grid-column: 1/3;
 }
 .checkbox {
+  /* display: flex;
+  gap: 8px; */
   flex-direction: row;
   grid-column: 1/3;
 }
@@ -49,11 +70,17 @@ input[type="checkbox"]:disabled {
   background-color: var(--gray-100);
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 800px) {
   .message {
     grid-column: 1/-1;
   }
   .checkbox {
     grid-column: 1/-1;
+  }
+}
+@media screen and (max-width: 415px) {
+  .checkbox input {
+    width: 30px;
+    height: 20px;
   }
 }
