--- a/src/pages/styles/contact.module.css
+++ b/src/pages/styles/contact.module.css
@@ -36,14 +36,41 @@
   gap: 24px;
 }
 .email {
+  position: relative;
   grid-column: 1/3;
 }
+
 .first {
+  position: relative;
   grid-column: 1/2;
 }
 .last {
+  position: relative;
   grid-column: 2/-1;
 }
+
+/* .first ::after {
+  position: absolute;
+  left: 0;
+  bottom: -21px;
+  color: var(--error-text);
+  content: "Please enter something";
+
+  z-index: 99;
+} */
+
+/* .Error {
+  color: var(--error-text);
+  border: 1px solid var(--error);
+}
+.Error ::after {
+  position: absolute;
+  left: 0;
+  bottom: -21px;
+  color: var(--error-text);
+  content: "Please enter something";
+  z-index: 99;
+} */
 
 @media screen and (max-width: 850px) {
   .Contact {
