--- a/src/components/styles/input.module.css
+++ b/src/components/styles/input.module.css
@@ -11,25 +11,55 @@ fieldset label {
 input {
   position: relative;
 }
-input[type="text"]:focus {
+input:focus,
+textarea:focus {
   border: 1px solid var(--primary-300);
 }
-input:invalid:focus,
-textarea:invalid:focus {
+
+.Error input,
+.Error textarea {
+  position: relative;
   border: 1px solid var(--error);
 }
-input[type="text"]::after {
-  /* display: block; */
+.Error textarea:focus,
+.Error input:focus {
+  box-shadow: 0px 0px 0px 4px #ffd3cc;
+}
+.Error ::after {
+  position: absolute;
+  left: 0;
+  bottom: -21px;
+  color: var(--error-text);
+  content: "Please enter a name";
+  z-index: 99;
+}
+
+.email.Error ::after {
+  content: "Please enter a valid email address";
+}
+.msg.Error ::after {
+  content: "Please enter a message";
+}
+
+/* .first{
+  display: none;
+}
+.first ::after {
   position: absolute;
   top: 100px;
   background-color: red;
   content: "Please enter something";
   height: 50px;
   width: 50px;
-}
+  z-index: 99;
+} */
 .message {
+  position: relative;
   width: 100%;
   grid-column: 1/3;
+}
+.message :focus {
+  box-shadow: 0px 0px 0px 4px #d1e9ff;
 }
 .checkbox {
   /* display: flex;
