improve: Clip sections to 1440px

--- a/src/components/styles/input.module.css
+++ b/src/components/styles/input.module.css
@@ -40,6 +40,8 @@ textarea:focus {
 .msg.Error ::after {
   content: "Please enter a message";
 }
+
+/* For Required attribute */
 /* textarea:invalid:focus,
 input:invalid:focus {
   border: 1px solid var(--error);
